--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,13 @@ homepage: https://github.com/adrianflutur/webviewx
 version: 0.2.3
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=3.1.3 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.3
-  path: ^1.8.0
+  http: ^0.13.6
+  path: ^1.9.0
   pointer_interceptor: ^0.9.0+1
   uuid: ^3.0.4
   webview_flutter: ^4.0.2
@@ -20,4 +19,4 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^1.6.0
+  lint: ^2.3.0
