--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: webviewx
 description: A feature-rich cross-platform webview using webview_flutter for
   mobile and iframe for web. JS interop-ready.
 homepage: https://github.com/adrianflutur/webviewx
-version: 0.2.6
+version: 0.2.7
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -14,7 +14,7 @@ dependencies:
   path: any
   pointer_interceptor: ^0.9.0+1
   uuid: ^3.0.4
-  webview_flutter: ^4.0.2
+  webview_flutter: any
 
 dev_dependencies:
   lint: ^2.3.0
